@startuml Diagram-ER
' Layout orizzontale
left to right direction
' Entità con PK/FK evidenziate
entity Cliente {
  codcliente : SERIAL <<PK>>
  nome : VARCHAR
  cognome : VARCHAR
  codicefiscale : CHAR(16)
  indirizzo : VARCHAR
  telefono : VARCHAR
  email : VARCHAR
}

entity Tessera {
  codtessera : SERIAL <<PK>>
  codcliente : INTEGER <<FK, UNIQUE>>
  numeropunti : NUMERIC
  dataemissione : DATE
  datascadenza : DATE
  stato : STATOTESSERA
}

entity Dipendente {
  coddipendente : SERIAL <<PK>>
  nome : VARCHAR
  cognome : VARCHAR
  codicefiscale : CHAR(16)
  indirizzo : VARCHAR
  telefono : VARCHAR
  email : VARCHAR
}

entity Prodotto {
  codprodotto : SERIAL <<PK>>
  nome : VARCHAR
  descrizione : VARCHAR
  prezzo : NUMERIC
  luogoprovenienza : VARCHAR
  dataraccolta : DATE
  datamungitura : DATE
  glutine : BOOLEAN
  datascadenza : DATE
  dataproduzione : DATE
  categoria : TIPOLOGIA
  scorta : INT
}

entity Ordine {
  codordine : SERIAL <<PK>>
  prezzototale : REAL
  dataacquisto : DATE
  codcliente : INTEGER <<FK>>
  coddipendente : INTEGER <<FK>>
}

entity ArticoliOrdine {
  codordine : INTEGER <<PK, FK>>
  codprodotto : INTEGER <<PK, FK>>
  prezzo : NUMERIC
  numeroarticoli : INT
}

' Relazioni con cardinalità
Cliente ||--|| Tessera : "1:1"
Cliente ||--o{ Ordine : "1:N"
Dipendente ||--o{ Ordine : "1:N"
Ordine ||--o{ ArticoliOrdine : "1:N"
Prodotto ||--o{ ArticoliOrdine : "1:N"

ArticoliOrdine }o--|| Ordine : "N:1"
ArticoliOrdine }o--|| Prodotto : "N:1"

@enduml
